deployment/stacks/application/base/template/network-policy/service-authentication-allow-external-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: service-authentication-allow-external-ingress
spec:
  podSelector:
    matchLabels:
      app: service-authentication
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 9025
