deployment/stacks/application/base/template/network-policy/service-search-allow-external-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: service-search-allow-external-ingress
spec:
  podSelector:
    matchLabels:
      app: service-search
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 8443
