deployment/stacks/application/base/template/network-policy/uec-sfs-default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: uec-sfs-default-deny-ingress
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
